[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/assets/sprites/system/motherboard_slot.pxo" type="Texture" id=1]
[ext_resource path="res://src/system/ItemSlot.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[node name="Slot" type="TextureRect"]
anchor_left = 0.039
anchor_top = 0.054
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -26.72
margin_top = -22.58
margin_right = -472.0
margin_bottom = -262.0
rect_pivot_offset = Vector2( 8, 8 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Area" type="Area2D" parent="."]
position = Vector2( 8, 8 )

[node name="Shape" type="CollisionShape2D" parent="Area"]
position = Vector2( -9.53674e-07, -9.53674e-07 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
